--- a/src/Styles/style.css
+++ b/src/Styles/style.css
@@ -18,6 +18,49 @@ div.loading {
     z-index: 999999;
 }
 
+.swal2-container {
+    z-index: 10000;
+    padding: 0;
+    /* Adjust the z-index as needed */
+}
+
+.swal2-show {
+    padding: 0px 0px 6px 0px !important;
+    animation: "swal2-show 3.3s !important"
+}
+
+div:where(.swal2-icon) .swal2-icon-content {
+    font-size: 2.75rem;
+}
+
+div:where(.swal2-container) h2:where(.swal2-title) {
+    padding: 0 !important;
+    font-size: 1.2rem !important;
+    font-weight: 400 !important;
+}
+
+div:where(.swal2-container) button:where(.swal2-styled) {
+    padding: 0.5em 1.5em !important;
+}
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-confirm {
+    background-color: #7066e0 !important;
+    font-size: 0.8rem !important
+}
+
+div:where(.swal2-container) button:where(.swal2-styled).swal2-cancel {
+    background-color: #909090 !important;
+    font-size: 0.8rem !important
+}
+
+div:where(.swal2-icon) {
+    margin: 0.5em auto .6em !important;
+    width: 3em !important;
+    height: 3em !important;
+    color: rgb(237, 113, 113) !important;
+    border-color: rgb(237, 113, 113) !important;
+}
+
 /* .MuiButtonBase-root {
     padding: 0px !important;
 } */
